--- a/notebooks/nmf/seeded_nmf_tests.qmd
+++ b/notebooks/nmf/seeded_nmf_tests.qmd
@@ -14,23 +14,30 @@ library(RcppML)
 Load Visium data
 
 ```{r}
-# Assemble spaceranger output files
-samples <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
-                      pattern = "filtered_feature_bc_matrix.h5", recursive = TRUE, 
-                      full.names = TRUE)
-imgs <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
-                   pattern = "tissue_hires_image.png", recursive = TRUE, 
-                   full.names = TRUE)
-spotfiles <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
-                        pattern = "tissue_positions_list.csv", recursive = TRUE, 
-                        full.names = TRUE)
-json <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
-                   pattern = "scalefactors_json.json", recursive = TRUE, 
-                   full.names = TRUE)
-infoTable <- tibble(samples, imgs, spotfiles, json, section_id = paste0("section_", 1:4))
+# # Assemble spaceranger output files
+# samples <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
+#                       pattern = "filtered_feature_bc_matrix.h5", recursive = TRUE, 
+#                       full.names = TRUE)
+# imgs <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
+#                    pattern = "tissue_hires_image.png", recursive = TRUE, 
+#                    full.names = TRUE)
+# spotfiles <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
+#                         pattern = "tissue_positions_list.csv", recursive = TRUE, 
+#                         full.names = TRUE)
+# json <- list.files(path = "/Volumes/Ludvig_backup/2022/10x_Visium_data/Standard_Visium", 
+#                    pattern = "scalefactors_json.json", recursive = TRUE, 
+#                    full.names = TRUE)
+# infoTable <- tibble(samples, imgs, spotfiles, json, section_id = paste0("section_", 1:4))
+# 
+# # Create Seurat object with 1 Sagittal Anterior section and 1 Sagittal Posterior section
+# se_brain <- ReadVisiumData(infoTable[1:2, ])
 
-# Create Seurat object with 1 Sagittal Anterior section and 1 Sagittal Posterior section
-se_brain <- ReadVisiumData(infoTable[1:2, ])
+samples <- "~/FFPE/10x_data/V10J14-101_A1/filtered_feature_bc_matrix.h5"
+imgs <- "~/FFPE/10x_data/V10J14-101_A1/spatial/tissue_hires_image.png"
+spotfiles <- "~/FFPE/10x_data/V10J14-101_A1/spatial/tissue_positions_list.csv"
+json <- "~/FFPE/10x_data/V10J14-101_A1/spatial/scalefactors_json.json"
+infoTable <- tibble(samples, imgs, spotfiles, json)
+se_brain <- ReadVisiumData(infoTable)
 ```
 
 Load single-cell data
@@ -117,7 +124,7 @@ se_brain[["snmf"]] <- snmf_dimreduc
 ```
 
 ```{r}
-MapFeatures(se_brain, features = "SNMF_5")
+MapFeatures(se_brain, features = "SNMF_23")
 ```
 
 ## Run mixed NMF
@@ -149,7 +156,7 @@ Find shared factors
 H_final <- prop.table(mixed_nmf@h, margin = 2)
 H_final[1:nrow(seeded_H), ] <- prop.table(seeded_H, margin = 2)
 H_final <- prop.table(H_final, margin = 2)
-W_final <- RcppML::project(w = t(H_final), data = t(xst))
+W_final <- xst %*% t(H_final) #RcppML::project(w = t(H_final), data = t(xst))
 msnmf_dimreduc <- CreateDimReducObject(embeddings = t(prop.table(H_final, 2)), 
                                      loadings = t(W_final),
                                      #as.matrix(W_ext[, 2:ncol(W_ext)]), 
@@ -160,8 +167,8 @@ msnmf_dimreduc <- CreateDimReducObject(embeddings = t(prop.table(H_final, 2)),
 se_brain[["msnmf"]] <- msnmf_dimreduc
 ```
 
-```{r fig.width=6, fig.height=5}
-N <- c(25, 33)
+```{r}
+N <- c(24, 25)
 MapFeatures(se_brain, features = paste0("MSNMF_", N))
 ```
 
@@ -171,7 +178,6 @@ Check loadings
 library(dplyr)
 library(tidyr)
 sel_genes <- W_final |>
-  t() |>
   as.data.frame() |>
   rownames_to_column(var = "gene") |>
   as_tibble() |>
@@ -181,7 +187,7 @@ sel_genes <- W_final |>
   arrange(-value) |>
   slice_head(n = 20)
 
-gg <- apply(W_final[, unique(sel_genes$gene)], 1, scales::rescale)
+gg <- apply(W_final[unique(sel_genes$gene), ], 2, scales::rescale)
 
 cols <- viridis::viridis(n = 50, direction = 1)
 pheatmap::pheatmap(gg, cluster_rows = F, cluster_cols = F, border_color = NA, 
@@ -190,13 +196,4 @@ pheatmap::pheatmap(gg, cluster_rows = F, cluster_cols = F, border_color = NA,
 
 ```{r}
 MapFeatures(se_brain, features = "Penk")
-```
-
-```{r fig.height=3, fig.width=3}
-corMat <- cor(t(W_final))
-diag(corMat) <- NA
-pheatmap::pheatmap(corMat, border_color = NA)
-
-# Find pairs
-apply(corMat, 1, which.max)
 ```
